17px padding for the nav-menu looks better; it leaves a gap before the user-links section. This avoids the crowded look 19px gives.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -177,7 +177,7 @@ ul#nav-menu li a {
 	height: inherit;
 	line-height: 29px;
 	outline: none;
-	padding: 0 19px;
+	padding: 0 17px;
 }
 #user-links {
 	background: #77ae51 url(header-tab-shadow.png) repeat-x bottom left;
